canvas info bar resize fix overlap

--- a/scss/components/iconbar.scss
+++ b/scss/components/iconbar.scss
@@ -5,6 +5,12 @@
     z-index: $zindex_over;
 }
 
+#canvasIconBar
+{
+
+    white-space: nowrap;
+}
+
 .cbl_iconbar_hor
 {
     padding-bottom: 2px !important;
